# jupyterhub_singleuser_profiles/api/swagger.yaml
@@ -45,6 +45,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/configmap'
 
+  /api/ui/configmap:
+    get:
+      operationId: jupyterhub_singleuser_profiles.api.api.get_ui_config
+      summary: Get a part of the main ConfigMap containing information about the UI
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+
   /api/images:
     get:
       operationId: jupyterhub_singleuser_profiles.api.api.get_images
